# django_blog

./: permissin.py  pyproject.toml
article/: models.py  serializer.py  urls.py  views.py
article/migrations/: 0001_initial.py  0002_initial.py
authentication/: serializer.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
django_blog/: settings.py  urls.py
templates/: Home.html
